# osu_sticker

./: .gitignore  Cargo.toml  build.rs  c_osu_sticker.h  cxx_osu_sticker.h  osu_sticker.h
.github/workflows/: build-gui.yml  build-lib.yml
osu_stick_gui/: .gitignore  README.md  pubspec.yaml
osu_stick_gui/android/app/: build.gradle
osu_stick_gui/android/app/src/main/: AndroidManifest.xml
osu_stick_gui/android/app/src/main/kotlin/com/example/osu_stick_gui/: MainActivity.kt
osu_stick_gui/android/app/src/main/kotlin/io/github/h2sxxa/osu_stick_gui/: MainActivity.kt
osu_stick_gui/lib/: ffi_bridge.dart  main.dart
osu_stick_gui/test/: widget_test.dart
osu_stick_gui/windows/: CMakeLists.txt
osu_stick_gui/windows/runner/: Runner.rc  main.cpp
src/: lib.rs  main.rs
