[package]
name = "osu_sticker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"

[profile.release]
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.26.0"
